<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/layout_category_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button_latest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_last"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="4dp"
            android:fontFamily="@font/roboto_light"
            app:backgroundTint="#C44CAF50"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/button_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_top"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="4dp"
            android:fontFamily="@font/roboto_light"
            app:backgroundTint="#C44CAF50"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/button_hot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_hot"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="4dp"
            android:fontFamily="@font/roboto_light"
            app:backgroundTint="#C44CAF50"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/button_random"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_random"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="4dp"
            android:fontFamily="@font/roboto_light"
            app:backgroundTint="#C44CAF50"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

<!--    <LinearLayout-->
<!--        android:id="@+id/layout_image"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="vertical"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/layout_bottom_button"-->
<!--        app:layout_constraintTop_toTopOf="parent">-->

    <ImageView
        android:id="@+id/post_image"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintBottom_toTopOf="@+id/description"
        app:layout_constraintTop_toBottomOf="@+id/layout_category_button"
        android:contentDescription="@string/image_description" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="@font/roboto_light"
        android:gravity="center"
        android:hint="@string/hint_text"
        android:textColor="#252525"
        android:textSize="8pt"
        app:layout_constraintBottom_toTopOf="@+id/layout_bottom_button"
        tools:layout_editor_absoluteX="8dp" />
<!--    </LinearLayout>-->


    <LinearLayout
        android:id="@+id/layout_bottom_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/button_prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="4dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/button_prev"
            android:textSize="10pt"
            app:backgroundTint="#C44CAF50"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/button_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="4dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/button_next"
            android:textSize="10pt"
            app:backgroundTint="#C44CAF50"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>